--- a/index.html
+++ b/index.html
@@ -24,15 +24,42 @@
     </div>
     <script>
         const API_KEY = "AIzaSyCVL-wLYIBCde7tH2bVIpo5VB8Rwv5WzRg"; // Tu nueva clave de API de YouTube
-        const CHANNEL_ID = "UCThorrijaGames"; // ID del canal
+        const CHANNEL_USERNAME = "ThorrijaGames"; // Nombre del canal
         const playlistContainer = document.getElementById("playlist-container");
         let isPlaying = false;
         let volumeControl = document.getElementById("volume");
 
+        async function getChannelId() {
+            try {
+                const response = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=id&forUsername=${CHANNEL_USERNAME}&key=${API_KEY}`);
+                const data = await response.json();
+                if (data.items && data.items.length > 0) {
+                    return data.items[0].id;
+                } else {
+                    console.error("No se encontró el canal.");
+                    return null;
+                }
+            } catch (error) {
+                console.error("Error obteniendo la ID del canal:", error);
+                return null;
+            }
+        }
+
         async function fetchPlaylists() {
-            const response = await fetch(`https://www.googleapis.com/youtube/v3/playlists?part=snippet&channelId=${CHANNEL_ID}&maxResults=10&key=${API_KEY}`);
-            const data = await response.json();
-            displayPlaylists(data.items);
+            const CHANNEL_ID = await getChannelId();
+            if (!CHANNEL_ID) return;
+            
+            try {
+                const response = await fetch(`https://www.googleapis.com/youtube/v3/playlists?part=snippet&channelId=${CHANNEL_ID}&maxResults=10&key=${API_KEY}`);
+                const data = await response.json();
+                if (data.items) {
+                    displayPlaylists(data.items);
+                } else {
+                    console.error("No se encontraron playlists.", data);
+                }
+            } catch (error) {
+                console.error("Error obteniendo playlists:", error);
+            }
         }
 
         function displayPlaylists(playlists) {
