--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
         <input type="range" id="volume" min="0" max="100" value="50">
     </div>
     <script>
-        const API_KEY = "AIzaSyCVL-wLYIBCde7tH2bVIpo5VB8Rwv5WzRg"; // Tu nueva clave de API de YouTube
-        const CHANNEL_USERNAME = "ThorrijaGames"; // Nombre del canal
+        const API_KEY = "AIzaSyCVL-wLYIBCde7tH2bVIpo5VB8Rwv5WzRg"; // Tu clave de API de YouTube
+        const CHANNEL_USERNAME = "@ThorrijaGames"; // Nombre del canal
         const playlistContainer = document.getElementById("playlist-container");
         let isPlaying = false;
         let volumeControl = document.getElementById("volume");
 
+        // Función para obtener el channelId del canal usando la búsqueda
         async function getChannelId() {
             try {
-                const response = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=id&forUsername=${CHANNEL_USERNAME}&key=${API_KEY}`);
+                const response = await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&q=${CHANNEL_USERNAME}&type=channel&key=${API_KEY}`);
                 const data = await response.json();
                 if (data.items && data.items.length > 0) {
-                    return data.items[0].id;
+                    return data.items[0].id.channelId;
                 } else {
                     console.error("No se encontró el canal.");
                     return null;
@@ -45,6 +46,7 @@
             }
         }
 
+        // Función para obtener las playlists del canal
         async function fetchPlaylists() {
             const CHANNEL_ID = await getChannelId();
             if (!CHANNEL_ID) return;
@@ -62,6 +64,7 @@
             }
         }
 
+        // Función para mostrar las playlists
         function displayPlaylists(playlists) {
             playlists.forEach(playlist => {
                 const iframe = document.createElement("iframe");
@@ -74,6 +77,7 @@
             });
         }
 
+        // Función para controlar la reproducción (mostrar/ocultar)
         document.getElementById("toggle").addEventListener("click", () => {
             isPlaying = !isPlaying;
             document.querySelectorAll(".playlist-container iframe").forEach(iframe => {
@@ -81,6 +85,7 @@
             });
         });
 
+        // Función para controlar el volumen
         volumeControl.addEventListener("input", (event) => {
             let volume = event.target.value / 100;
             document.querySelectorAll(".playlist-container iframe").forEach(iframe => {
@@ -88,6 +93,7 @@
             });
         });
 
+        // Cargar las playlists al cargar la página
         fetchPlaylists();
     </script>
 </body>
