--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             if (!CHANNEL_ID) return;
             
             try {
-                const response = await fetch(`https://www.googleapis.com/youtube/v3/playlists?part=snippet&channelId=${CHANNEL_ID}&maxResults=10&key=${API_KEY}`);
+                // Solicitar el máximo de 100 playlists por respuesta
+                const response = await fetch(`https://www.googleapis.com/youtube/v3/playlists?part=snippet&channelId=${CHANNEL_ID}&maxResults=100&key=${API_KEY}`);
                 const data = await response.json();
                 if (data.items) {
                     displayPlaylists(data.items);
