--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         .playlist-container iframe {
-            width: 300px; /* Tamaño más pequeño */
+            width: 300px;
             height: 170px;
             margin: 5px;
         }
@@ -20,6 +20,7 @@
         iframe {
             width: 300px;
             height: 170px;
+            display: none; /* Inicialmente ocultos */
         }
         #playButton {
             margin-top: 20px;
@@ -137,9 +138,9 @@
                 const iframe = document.createElement("iframe");
                 iframe.src = `https://www.youtube.com/embed/${videoId}`;
                 iframe.frameBorder = "0";
-                iframe.width = "300";
-                iframe.height = "170";
-                iframe.allowFullscreen = true;
+                iframe.dataset.src = `https://www.youtube.com/embed/${videoId}`; // Atributo de pereza
+                iframe.setAttribute('data-loaded', 'false'); // Marca para cargar solo cuando sea necesario
+                iframe.classList.add("lazy-load"); // Clases para Lazy Load
 
                 // Crear un contenedor para el video
                 const videoItem = document.createElement("div");
@@ -152,27 +153,36 @@
             });
         }
 
-        // Función para reproducir videos automáticamente
-        function playNextVideo() {
-            if (currentVideoIndex < videoList.length) {
-                // Mostrar el iframe correspondiente al video
-                videoList[currentVideoIndex].style.display = 'block';
+        // Cargar los videos solo cuando el iframe esté cerca de la pantalla
+        function lazyLoadVideos() {
+            const lazyVideos = document.querySelectorAll("iframe.lazy-load");
 
-                // Incrementar el índice para el siguiente video
-                currentVideoIndex++;
+            const options = {
+                rootMargin: "0px 0px 100px 0px", // Cargar el video cuando esté cerca del viewport
+                threshold: 0
+            };
 
-                // Si hay más videos, reproducir el siguiente después de 5 segundos
-                if (currentVideoIndex < videoList.length) {
-                    setTimeout(playNextVideo, 5000); // Espera de 5 segundos antes de cambiar al siguiente video
-                }
-            }
+            const observer = new IntersectionObserver((entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        const iframe = entry.target;
+                        if (iframe.dataset.src && iframe.getAttribute('data-loaded') === 'false') {
+                            iframe.src = iframe.dataset.src;
+                            iframe.setAttribute('data-loaded', 'true'); // Marcar como cargado
+                        }
+                        observer.unobserve(iframe); // Dejar de observar una vez cargado
+                    }
+                });
+            }, options);
+
+            lazyVideos.forEach(iframe => observer.observe(iframe));
         }
 
-        // Evento para iniciar la reproducción automática
+        // Función para iniciar la reproducción
         playButton.addEventListener("click", () => {
             currentVideoIndex = 0; // Iniciar desde el primer video
-            videoList.forEach(iframe => iframe.style.display = 'none'); // Ocultar todos los videos
-            playNextVideo(); // Iniciar la reproducción
+            videoList.forEach(iframe => iframe.style.display = 'block'); // Mostrar todos los iframes
+            lazyLoadVideos(); // Iniciar la carga perezosa
         });
 
         // Cargar las playlists y videos
